# mock-auth-server

./: .gitignore  README.md  app.py  config.yaml  oauth-test.py  pyproject.toml  sample-config.yaml  sample-mockapi-config.yaml
src/: __init__.py  config.py  mockapi.py  oauth1.py  oauth2.py
